pre-materials/docker_and_k8s/intro_to_k8s/manifests/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: new-ns
  labels:
    app: example-app
spec:
  selector:
    matchLabels:
      app: userinfo-app
  template:
    metadata:
      labels:
        app: userinfo-app
    spec:
      containers:
      - name: userinfo-app
        image: docker.io/yumol/myapp:v1
        ports: 
        - containerPort: 8080
